feat(permission): Read permission on authenticated

--- a/jivecakeios/Auth0.plist
+++ b/jivecakeios/Auth0.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
     <dict>
         <key>ClientId</key>
-        <string></string>
+        <string>SKfc9J6Y3QQxwubWIWFmSrCytiUS3yIq</string>
         <key>Domain</key>
         <string>jivecake.auth0.com</string>
     </dict>
